input data preprocessed and batched

--- a/10_Food_Vision_101.ipynb
+++ b/10_Food_Vision_101.ipynb
@@ -6,7 +6,7 @@
       "name": "10_Food_Vision_101.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMA6aBTGiMOzJEJK7OlGfWr",
+      "authorship_tag": "ABX9TyPC1gAIm7W4cE2CYSD0nVdc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3073,6 +3073,137 @@
       "cell_type": "code",
       "metadata": {
         "id": "TRRsJAvgd0Tv"
+      },
+      "source": [
+        "# make a function to preprocess data\n",
+        "def preprocess_img(image,label, img_shape=224):\n",
+        "  image = tf.image.resize(image, [img_shape, img_shape])\n",
+        "  return tf.cast(image, tf.float32), label"
+      ],
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "frsYyGOPgB2s",
+        "outputId": "4adc1645-f1bc-495d-ca49-a66d9bfe65af"
+      },
+      "source": [
+        "# preprocess a single image and check the outputs\n",
+        "preprocessed_img = preprocess_img(image,label)[0]\n",
+        "print(f\"Image before preprocessing: \\n {image[:2]}..., \\nShape: {image.shape}, \\nDatatype : {image.dtype}\\n\")\n",
+        "print(f\"Image after preprocessing: \\n{preprocessed_img[:2]}..., \\nShape:{preprocessed_img.shape}, \\nDatatype: {preprocessed_img.dtype}\")"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Image before preprocessing: \n",
+            " [[[ 83  71  45]\n",
+            "  [ 81  69  43]\n",
+            "  [ 80  68  44]\n",
+            "  ...\n",
+            "  [186 183 142]\n",
+            "  [188 185 144]\n",
+            "  [185 182 141]]\n",
+            "\n",
+            " [[ 86  74  48]\n",
+            "  [ 83  71  45]\n",
+            "  [ 82  70  46]\n",
+            "  ...\n",
+            "  [180 177 136]\n",
+            "  [179 176 135]\n",
+            "  [182 179 138]]]..., \n",
+            "Shape: (489, 512, 3), \n",
+            "Datatype : <dtype: 'uint8'>\n",
+            "\n",
+            "Image after preprocessing: \n",
+            "[[[ 83.108574  71.108574  45.108578]\n",
+            "  [ 82.11161   70.11161   46.11161 ]\n",
+            "  [ 84.873245  72.873245  49.30182 ]\n",
+            "  ...\n",
+            "  [191.5464   188.5464   147.5464  ]\n",
+            "  [184.01991  181.01991  140.01991 ]\n",
+            "  [182.87247  179.87247  138.87247 ]]\n",
+            "\n",
+            " [[ 87.08051   75.08051   51.080517]\n",
+            "  [ 84.33609   72.33609   48.336098]\n",
+            "  [ 83.439735  70.796875  47.439735]\n",
+            "  ...\n",
+            "  [198.13402  195.13402  154.13402 ]\n",
+            "  [194.08138  191.08138  150.08138 ]\n",
+            "  [193.38318  190.38318  149.38318 ]]]..., \n",
+            "Shape:(224, 224, 3), \n",
+            "Datatype: <dtype: 'float32'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "T77Z_oa2hJEy"
+      },
+      "source": [
+        "### Batch and prepare Datasets"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P6FIikC6iFfF"
+      },
+      "source": [
+        "# Map preprocessing function to training and parallelizing\n",
+        "train_data = train_data.map(map_func=preprocess_img, num_parallel_calls=tf.data.AUTOTUNE)\n",
+        "\n",
+        "#Shuffle train data and turn them into Batches\n",
+        "train_data = train_data.shuffle(buffer_size=1000).batch(batch_size=32).prefetch(buffer_size=tf.data.AUTOTUNE)\n",
+        "\n",
+        "#Ditto for testing Data\n",
+        "test_data = test_data.map(map_func=preprocess_img, num_parallel_calls=tf.data.AUTOTUNE).batch(32).prefetch(tf.data.AUTOTUNE)\n",
+        "\n"
+      ],
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x5xdaB1WlAH5",
+        "outputId": "23c7b099-93b4-4718-a7c6-03c0fe0e0cce"
+      },
+      "source": [
+        "train_data, test_data"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<PrefetchDataset shapes: ((None, 224, 224, 3), (None,)), types: (tf.float32, tf.int64)>,\n",
+              " <PrefetchDataset shapes: ((None, 224, 224, 3), (None,)), types: (tf.float32, tf.int64)>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-1XE5yVvlDFS"
       },
       "source": [
         ""
