--- a/10_Food_Vision_101.ipynb
+++ b/10_Food_Vision_101.ipynb
@@ -6,7 +6,7 @@
       "name": "10_Food_Vision_101.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPC1gAIm7W4cE2CYSD0nVdc",
+      "authorship_tag": "ABX9TyM8qYZDjUO1BtPnxWmb6Kq5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3201,9 +3201,45 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "-1XE5yVvlDFS"
+      },
+      "source": [
+        "### Creating modelling callbacks"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8y1N3dGXnFBq"
+      },
+      "source": [
+        "from helper_functions import create_tensorboard_callback"
+      ],
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3fPs8Tv3n2T4"
+      },
+      "source": [
+        "checkpoint_path = \"model_checkpoints/cp.ckpt\"\n",
+        "model_checkpoint = tf.keras.callbacks.ModelCheckpoint(checkpoint_path,\n",
+        "                                                      monitor=\"val_acc\",\n",
+        "                                                      save_best_only=True,\n",
+        "                                                      save_weights_only=True,\n",
+        "                                                      verbose=0)\n"
+      ],
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EF0kFzI9ohWQ"
       },
       "source": [
         ""
