setup mixed precision training

--- a/10_Food_Vision_101.ipynb
+++ b/10_Food_Vision_101.ipynb
@@ -6,7 +6,7 @@
       "name": "10_Food_Vision_101.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM8qYZDjUO1BtPnxWmb6Kq5",
+      "authorship_tag": "ABX9TyMMD6qX2fxAXxmbeujtTuBE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3239,7 +3239,86 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EF0kFzI9ohWQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "EF0kFzI9ohWQ",
+        "outputId": "b8aa71cf-e5e6-4752-8899-368a3c66ef96"
+      },
+      "source": [
+        "tf.__version__"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'2.6.0'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qUH8O2gso0nH"
+      },
+      "source": [
+        "### Setup mixed precision training"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iFqisx5Xpg9U",
+        "outputId": "0fa90478-bd92-41b8-bea4-114eddfa745b"
+      },
+      "source": [
+        "# turn on mixed precision training\n",
+        "from tensorflow.keras import mixed_precision\n",
+        "mixed_precision.set_global_policy(\"mixed_float16\")"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "WARNING:tensorflow:Mixed precision compatibility check (mixed_float16): WARNING\n",
+            "Your GPU may run slowly with dtype policy mixed_float16 because it does not have compute capability of at least 7.0. Your GPU:\n",
+            "  Tesla P100-PCIE-16GB, compute capability 6.0\n",
+            "See https://developer.nvidia.com/cuda-gpus for a list of GPUs and their compute capabilities.\n",
+            "If you will use compatible GPU(s) not attached to this host, e.g. by running a multi-worker model, you can ignore this warning. This message will only be logged once\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:tensorflow:Mixed precision compatibility check (mixed_float16): WARNING\n",
+            "Your GPU may run slowly with dtype policy mixed_float16 because it does not have compute capability of at least 7.0. Your GPU:\n",
+            "  Tesla P100-PCIE-16GB, compute capability 6.0\n",
+            "See https://developer.nvidia.com/cuda-gpus for a list of GPUs and their compute capabilities.\n",
+            "If you will use compatible GPU(s) not attached to this host, e.g. by running a multi-worker model, you can ignore this warning. This message will only be logged once\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XyQv9kOVp4kE"
       },
       "source": [
         ""
