--- a/10_Food_Vision_101.ipynb
+++ b/10_Food_Vision_101.ipynb
@@ -6,7 +6,7 @@
       "name": "10_Food_Vision_101.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMMD6qX2fxAXxmbeujtTuBE",
+      "authorship_tag": "ABX9TyOlhTS85gda4SzAQVKNwyvn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3316,9 +3316,89 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "XyQv9kOVp4kE"
+      },
+      "source": [
+        "### Build Feature Extraction Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SYsx59Zksqpt"
+      },
+      "source": [
+        "from tensorflow.keras import layers\n",
+        "from tensorflow.keras.layers.experimental import preprocessing\n",
+        "\n",
+        "# Create base model\n",
+        "input_shape = (224, 224, 3)\n",
+        "base_model = tf.keras.applications.EfficientNetB0(include_top=False)\n",
+        "base_model.trainable = False\n",
+        "\n",
+        "# Create functional model\n",
+        "inputs = layers.Input(shape=input_shape, name=\"input_layer\")\n",
+        "\n",
+        "x = base_model(inputs, training=False)\n",
+        "x = layers.GlobalAveragePooling2D()(x)\n",
+        "x = layers.Dense(len(class_names))(x)\n",
+        "outputs = layers.Activation(\"softmax\", dtype=tf.float32, name= \"softmax_float32\")(x)\n",
+        "model = tf.keras.Model(inputs, outputs)\n",
+        "\n",
+        "# compilr the model \n",
+        "model.compile(loss=\"sparse_categorical_crossentropy\",\n",
+        "              optimizer=tf.keras.optimizers.Adam(),\n",
+        "              metrics=[\"accuracy\"])"
+      ],
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xfN0lbdpueQa",
+        "outputId": "55b15c04-8fb6-4e6b-e735-5183e50c45f1"
+      },
+      "source": [
+        "model.summary()"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"model\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "input_layer (InputLayer)     [(None, 224, 224, 3)]     0         \n",
+            "_________________________________________________________________\n",
+            "efficientnetb0 (Functional)  (None, None, None, 1280)  4049571   \n",
+            "_________________________________________________________________\n",
+            "global_average_pooling2d_1 ( (None, 1280)              0         \n",
+            "_________________________________________________________________\n",
+            "dense_1 (Dense)              (None, 101)               129381    \n",
+            "_________________________________________________________________\n",
+            "softmax_float32 (Activation) (None, 101)               0         \n",
+            "=================================================================\n",
+            "Total params: 4,178,952\n",
+            "Trainable params: 129,381\n",
+            "Non-trainable params: 4,049,571\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PzQ-pmfHumaY"
       },
       "source": [
         ""
