fitted the model for feature extraction

--- a/10_Food_Vision_101.ipynb
+++ b/10_Food_Vision_101.ipynb
@@ -6,7 +6,7 @@
       "name": "10_Food_Vision_101.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNSF9zJIrR4CC479YDg2NN2",
+      "authorship_tag": "ABX9TyOyxXR1Sko85w6tUQ9Bs7U+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3686,18 +3686,97 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SMZlG4jlwGSV"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SMZlG4jlwGSV",
+        "outputId": "25950bc0-f2f6-41e4-dcb4-c258dc0aa770"
       },
       "source": [
         "# Fit the feature extraction model\n",
         "history_101_food_classes_feature_extract = model.fit(train_data,\n",
         "                                                     epochs=3,\n",
-        "                                                     steps_per_epochs = (len(train_data)),\n",
+        "                                                     steps_per_epoch = (len(train_data)),\n",
         "                                                     validation_data=test_data,\n",
         "                                                     validation_steps = int(0.15* len(test_data)),\n",
         "                                                     callbacks= [create_tensorboard_callback(dir_name=\"training_logs\",\n",
         "                                                                                             experiment_name=\"efficientnetb0_101_all_data_feature\"),\n",
         "                                                                 model_checkpoint])"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving TensorBoard log files to: training_logs/efficientnetb0_101_all_data_feature/20211031-143906\n",
+            "Epoch 1/3\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/keras/utils/generic_utils.py:497: CustomMaskWarning: Custom mask layers require a config and must override get_config. When loading, the custom mask layer must be passed to the custom_objects argument.\n",
+            "  category=CustomMaskWarning)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2368/2368 [==============================] - 186s 69ms/step - loss: 1.8221 - accuracy: 0.5568 - val_loss: 1.2417 - val_accuracy: 0.6708\n",
+            "WARNING:tensorflow:Can save best model only with val_acc available, skipping.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:tensorflow:Can save best model only with val_acc available, skipping.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 2/3\n",
+            "2368/2368 [==============================] - 155s 65ms/step - loss: 1.2937 - accuracy: 0.6653 - val_loss: 1.1304 - val_accuracy: 0.6965\n",
+            "WARNING:tensorflow:Can save best model only with val_acc available, skipping.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:tensorflow:Can save best model only with val_acc available, skipping.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 3/3\n",
+            "2368/2368 [==============================] - 155s 65ms/step - loss: 1.1425 - accuracy: 0.7015 - val_loss: 1.0889 - val_accuracy: 0.7066\n",
+            "WARNING:tensorflow:Can save best model only with val_acc available, skipping.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:tensorflow:Can save best model only with val_acc available, skipping.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JkNLAQfLydWr"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
